fix modal class for visibility

--- a/blocks/modal.css
+++ b/blocks/modal.css
@@ -10,7 +10,7 @@
   align-items: center;
   justify-content: center;
   padding: 0 20px;
-  /* visibility: hidden; */
+  visibility: hidden;
 }
 .modal__opened {
   visibility: visible;
